--- a/conf/tellme-site.conf
+++ b/conf/tellme-site.conf
@@ -1,4 +1,4 @@
-tail.files=/tmp/log,/tmp/text
+tail.files=/data/work/rcv/nginx/logs/show.log,/data/work/ClickServer/logs/event.log,/data/work/seller_adaptor/log/ui.log
 
 http.port=9090
 table.ttl.ms=86400000
@@ -7,4 +7,4 @@ config.update.period=120000
 
 parser.map=log:EVENT;text:UI
 
-excute.item=log:media_id=ab66b3c6,media_id#os_id=ab66b3c6#1;text:media_id#os_id=31d70528#2
+excute.item=
