--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
             <url>http://scala-tools.org/repo-releases</url>
         </repository>
     </repositories>
+    <properties>
+            <spray.version>1.3.3</spray.version>
+            <scala.version>2.11.6</scala.version>
+    </properties>
     <pluginRepositories>
         <pluginRepository>
             <id>scala-tools.org</id>
@@ -23,9 +27,14 @@
     </pluginRepositories>
     <dependencies>
         <dependency>
+            <groupId>io.spray</groupId>
+            <artifactId>spray-can_2.11</artifactId>
+            <version>${spray.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.11.6</version>
+            <version>${scala.version}</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -46,17 +55,17 @@
         <dependency>
             <groupId>io.spray</groupId>
             <artifactId>spray-util_2.11</artifactId>
-            <version>1.3.3</version>
+            <version>${spray.version}</version>
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
             <artifactId>spray-http_2.11</artifactId>
-            <version>1.3.3</version>
+            <version>${spray.version}</version>
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
             <artifactId>spray-io_2.11</artifactId>
-            <version>1.3.3</version>
+            <version>${spray.version}</version>
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
@@ -65,13 +74,8 @@
         </dependency>
         <dependency>
             <groupId>io.spray</groupId>
-            <artifactId>spray-can_2.11</artifactId>
-            <version>1.3.3</version>
-        </dependency>
-        <dependency>
-            <groupId>io.spray</groupId>
             <artifactId>spray-routing-shapeless2_2.11</artifactId>
-            <version>1.3.3</version>
+            <version>${spray.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.protobuf</groupId>
@@ -101,20 +105,22 @@
                 </configuration>
             </plugin>
             <plugin>
-              <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>make-assembly</id>
+                        <id>copy-dependencies</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>copy-dependencies</goal>
                         </goals>
-                    </execution>
+                        <configuration>
+                            <outputDirectory>./lib</outputDirectory>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                       </configuration>
+                   </execution>
                 </executions>
             </plugin>
         </plugins>
